# OOP-labs

./: CMakeLists.txt  README.md  main.cpp
include/: laba1.h
src/: laba1.cpp
tests/: laba1_test.cpp
